docs-archive/apache-airflow-providers-tableau/5.5.0/_sources/_api/airflow/providers/tableau/operators/tableau/index.rst.txt
airflow.providers.tableau.operators.tableau
===========================================

.. py:module:: airflow.providers.tableau.operators.tableau


Attributes
----------

.. autoapisummary::

   airflow.providers.tableau.operators.tableau.RESOURCES_METHODS


Classes
-------

.. autoapisummary::

   airflow.providers.tableau.operators.tableau.TableauOperator


Module Contents
---------------

.. py:data:: RESOURCES_METHODS

.. py:class:: TableauOperator(*, resource, method, find, match_with = 'id', site_id = None, blocking_refresh = True, check_interval = 20, incremental_refresh = False, tableau_conn_id = 'tableau_default', **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Execute a Tableau API Resource.

   https://tableau.github.io/server-client-python/docs/api-ref

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:TableauOperator`

   :param resource: The name of the resource to use.
   :param method: The name of the resource's method to execute.
   :param find: The reference of resource that will receive the action.
   :param match_with: The resource field name to be matched with find parameter.
   :param site_id: The id of the site where the workbook belongs to.
   :param blocking_refresh: By default will be blocking means it will wait until it has finished.
   :param check_interval: time in seconds that the job should wait in
       between each instance state checks until operation is completed
   :param incremental_refresh: Whether to perform an incremental refresh instead of a full refresh.
       Only applies to datasource and workbook refresh operations. Defaults to False (full refresh).
   :param tableau_conn_id: The :ref:`Tableau Connection id <howto/connection:tableau>`
       containing the credentials to authenticate to the Tableau Server.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('find', 'match_with')



   .. py:attribute:: resource


   .. py:attribute:: method


   .. py:attribute:: find


   .. py:attribute:: match_with
      :value: 'id'



   .. py:attribute:: check_interval
      :value: 20



   .. py:attribute:: site_id
      :value: None



   .. py:attribute:: blocking_refresh
      :value: True



   .. py:attribute:: incremental_refresh
      :value: False



   .. py:attribute:: tableau_conn_id
      :value: 'tableau_default'



   .. py:method:: execute(context)

      Execute the Tableau API resource and push the job id or downloaded file URI to xcom.

      :param context: The task context during execution.
      :return: the id of the job that executes the extract refresh or downloaded file URI.



